welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: Unit does not take parameters
		gauche()();
                        ^